update roi-html change to generic

--- a/roi-html.html
+++ b/roi-html.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <meta charset="utf-8">
-    <title>ROI Calculator</title>
+    <title>Calculator</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="initial-scale=1.0">
@@ -37,14 +37,14 @@
         <div class="container-update section container">
         <div class="row">
             <div class="col-xs-12 ROI-heading">
-                <h1>Sales ROI Calculator</h1>
-                <p>This is the Sales ROI Calculator. Here you can see where your sales team is currently at and where you want your sales team to be. InsideSales.com can get you there!</p>
+                <h1>Calculator</h1>
+                <p>See where you're at and where you should be.. </p>
             </div>
             <div class="col-md-4">
                  <div class="metric-box">
                     <div class="metric-heading row">
                         <div class="col-xs-12">
-                            <h2>Daily Dials / Rep</h2>
+                            <h2>Metric 1</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -88,7 +88,7 @@
                                 </div>
                             </div>
                         <div class="col-xs-12 revenue-increase-container">
-                                <h3>Revenue Increase</h3>
+                                <h3>Increase</h3>
                                 <p class="revenue-increase-percentage green">+<span class="revIncreaseP"></span>%</p>
                                 <p id="monthly-increase-revenue" class="revenue-increase-monvsan m-p-decrease">+$<span class="monthlyRI"></span> monthly</p>
                                 <p id="annual-increase-revenue" class="revenue-increase-monvsan">+$<span class="annualRI"></span> annually</p>
@@ -101,7 +101,7 @@
                  <div class="metric-box">
                     <div class="metric-heading row">
                         <div class="col-xs-12">
-                            <h2>Dial : Contact %</h2>
+                            <h2>Metric 2</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
                         <div class="col-xs-12 revenue-increase-container">
-                                <h3>Revenue Increase</h3>
+                                <h3>Increase</h3>
                                 <p class="revenue-increase-percentage green">+<span class="revIncreaseP"></span>%</p>
                                 <p id="monthly-increase-revenue" class="revenue-increase-monvsan m-p-decrease">+$<span class="monthlyRI"></span> monthly</p>
                                 <p id="annual-increase-revenue" class="revenue-increase-monvsan">+$<span class="annualRI"></span> annually</p>
@@ -158,7 +158,7 @@
                  <div class="metric-box">
                     <div class="metric-heading row">
                         <div class="col-xs-12">
-                            <h2>Close Rate %</h2>
+                            <h2>Metric 3</h2>
                         </div>
                     </div>
                     <div class="row">
@@ -204,7 +204,7 @@
                         <div class="col-xs-12 revenue-increase-container" style="
     /* margin: 0em; */
 ">
-                                <h3>Revenue Increase</h3>
+                                <h3>Increase</h3>
                                 <p class="revenue-increase-percentage green">+<span class="revIncreaseP"></span>%</p>
                                 <p id="monthly-increase-revenue" class="revenue-increase-monvsan m-p-decrease">+$<span class="monthlyRI"></span> monthly</p>
                                 <p id="annual-increase-revenue" class="revenue-increase-monvsan">+$<span class="annualRI"></span> annually</p>
